Resultados/Marcela/main/result_compilation.txt
tFantasma.c:13:1: error: unknown type name ‘tFantasma’
   13 | tFantasma* CriaFantasma(tPosicao* posicao, char tipo){
      | ^~~~~~~~~
tFantasma.c:13:25: error: unknown type name ‘tPosicao’
   13 | tFantasma* CriaFantasma(tPosicao* posicao, char tipo){
      |                         ^~~~~~~~
tFantasma.c:48:19: error: unknown type name ‘tFantasma’
   48 | void MoveFantasma(tFantasma* fantasma, tMapa* mapa);
      |                   ^~~~~~~~~
tFantasma.c:48:40: error: unknown type name ‘tMapa’
   48 | void MoveFantasma(tFantasma* fantasma, tMapa* mapa);
      |                                        ^~~~~
tFantasma.c:58:1: error: unknown type name ‘bool’
   58 | bool MatouPacmanFantasma(tFantasma* fantasma, tPacman* pacman);
      | ^~~~
tFantasma.c:1:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
  +++ |+#include <stdbool.h>
    1 | #define DIREITA 1
tFantasma.c:58:26: error: unknown type name ‘tFantasma’
   58 | bool MatouPacmanFantasma(tFantasma* fantasma, tPacman* pacman);
      |                          ^~~~~~~~~
tFantasma.c:58:47: error: unknown type name ‘tPacman’
   58 | bool MatouPacmanFantasma(tFantasma* fantasma, tPacman* pacman);
      |                                               ^~~~~~~
tFantasma.c:65:30: error: unknown type name ‘tFantasma’
   65 | void AtualizaPosicaoFantasma(tFantasma* fantasma, tPosicao* posicaoNova){
      |                              ^~~~~~~~~
tFantasma.c:65:51: error: unknown type name ‘tPosicao’
   65 | void AtualizaPosicaoFantasma(tFantasma* fantasma, tPosicao* posicaoNova){
      |                                                   ^~~~~~~~
tFantasma.c:76:23: error: unknown type name ‘tFantasma’
   76 | void DesalocaFantasma(tFantasma* fantasma){
      |                       ^~~~~~~~~
tFantasma.c:90:24: error: unknown type name ‘tFantasma’
   90 | char ObtemTipoFantasma(tFantasma* fantasma){
      |                        ^~~~~~~~~
tFantasma.c:99:26: error: unknown type name ‘tFantasma’
   99 | int ObtemDirecaoFantasma(tFantasma* fantasma){
      |                          ^~~~~~~~~
tFantasma.c:109:1: error: unknown type name ‘bool’
  109 | bool TocouFrutaFantasma(tFantasma* fantasma){
      | ^~~~
tFantasma.c:109:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
tFantasma.c:109:25: error: unknown type name ‘tFantasma’
  109 | bool TocouFrutaFantasma(tFantasma* fantasma){
      |                         ^~~~~~~~~
tFantasma.c:122:1: error: unknown type name ‘bool’
  122 | bool TocouParedeFantasma(tFantasma* fantasma){
      | ^~~~
tFantasma.c:122:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
tFantasma.c:122:26: error: unknown type name ‘tFantasma’
  122 | bool TocouParedeFantasma(tFantasma* fantasma){
      |                          ^~~~~~~~~
tFantasma.c:134:1: error: unknown type name ‘tPosicao’
  134 | tPosicao* ObtemPosicaoAtualFantasma(tFantasma* fantasma){
      | ^~~~~~~~
tFantasma.c:134:37: error: unknown type name ‘tFantasma’
  134 | tPosicao* ObtemPosicaoAtualFantasma(tFantasma* fantasma){
      |                                     ^~~~~~~~~
tFantasma.c:143:1: error: unknown type name ‘tPosicao’
  143 | tPosicao* ObtemPosicaoAntigaFantasma(tFantasma* fantasma){
      | ^~~~~~~~
tFantasma.c:143:38: error: unknown type name ‘tFantasma’
  143 | tPosicao* ObtemPosicaoAntigaFantasma(tFantasma* fantasma){
      |                                      ^~~~~~~~~
